# eval-framework-py

./: README.md  pyproject.toml  results.json
data/evals/: sample_offer_parser_redacted.json
src/eval_framework/: __init__.py  cli.py  webapp.py
src/eval_framework/evals/: __init__.py  comparator.py  dataset.py  envelope.py  gates.py  grader.py  judge.py  logging.py  metrics.py  runner.py  task.py
src/eval_framework/web_static/: styles.css
src/eval_framework/web_templates/: index.html
src/eval_framework_py.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_eval_framework_integration.py  test_eval_framework_phase2.py
