[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eval-framework-py"
version = "0.1.0"
description = "Project-agnostic lightweight evaluation framework for LLM workflows"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest==8.4.2",
]

[project.scripts]
eval-framework = "eval_framework.cli:main"

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
