[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eval-framework-py"
version = "0.1.0"
description = "Project-agnostic lightweight evaluation framework for LLM workflows"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2,<3",
    "fastapi>=0.115,<1",
    "uvicorn>=0.30,<1",
    "jinja2>=3.1,<4",
    "python-multipart>=0.0.9,<1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.2",
]

[project.scripts]
eval-framework = "eval_framework.cli:main"
eval-framework-web = "eval_framework.webapp:main"

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
